@@ -1,3 +1,7 @@
+March 2015
+  - templates for server profiles
+
+
 16.12.2014 4.8
   - Active Directory: support paged result as workaround for size limit exceeded
   - FreeRadius: support dialupAccess and radiusProfileDn
